--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -1,5 +1,5 @@
 <android.support.v7.widget.CardView
-    android:id="@+id/news_item_container"
+    android:id="@+id/article_item_container"
     style="@style/NewsItem"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/news_item_preview"
+            android:id="@+id/article_item_preview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white_background"
@@ -26,11 +26,11 @@
                 android:layout_width="110dp"
                 android:layout_height="110dp"
                 android:scaleType="centerCrop"
-                android:id="@+id/news_item_image"
-                tools:src="@drawable/placeholder_news_item_image" />
+                android:id="@+id/article_item_image"
+                tools:src="@drawable/placeholder_article_item_image" />
 
             <LinearLayout
-                android:id="@+id/news_item_content"
+                android:id="@+id/article_item_content"
                 android:layout_width="0dp"
                 android:layout_height="94dp"
                 android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
@@ -42,7 +42,7 @@
 
                 <TextView
                     style="@style/NewsItemTitle"
-                    android:id="@+id/news_item_title"
+                    android:id="@+id/article_item_title"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:textColor="@color/body_text_2"
@@ -53,7 +53,7 @@
                 <TextView
                     style="@style/NewsItemText"
                     android:layout_marginTop="@dimen/keyline_1_minus_8dp"
-                    android:id="@+id/news_item_description"
+                    android:id="@+id/article_item_description"
                     android:textColor="@color/list_dropdown_foreground_normal"
                     android:textSize="@dimen/text_size_small"
                     tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque posuere velit sed posuere tempor. Duis hendrerit, risus et suscipit hendrerit, turpis nibh feugiat odio, sit amet interdum ligula elit a massa. Curabitur nec sem nec urna eleifend porttitor. Nulla at justo id lorem feugiat mattis sit amet sed lorem. Etiam sed est odio. Vivamus id scelerisque massa. Vivamus vitae massa et libero hendrerit sodales sed sed ante. Maecenas metus augue, rutrum at sagittis sed, gravida sed orci. Vestibulum quis massa lorem."
@@ -65,7 +65,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/news_item_footer"
+            android:id="@+id/article_item_footer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/gray_background"
@@ -73,7 +73,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/news_footer_content"
+                android:id="@+id/article_footer_content"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
@@ -85,7 +85,7 @@
 
             <TextView
                 style="@style/NewsItemText"
-                android:id="@+id/news_item_feed"
+                android:id="@+id/article_item_feed"
                 android:textColor="@color/list_dropdown_foreground_normal"
                 android:textSize="@dimen/text_size_small"
                 tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit"
