--- a/app/src/main/res/values-land/styles.xml
+++ b/app/src/main/res/values-land/styles.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <ArticleNews details -->
+    <!-- News details -->
     <style name="NewsDetailAnchor">
-        <item name="android:layout_alignTop">@id/news_illustration_container</item>
+        <item name="android:layout_alignTop">@id/article_illustration_container</item>
     </style>
 
 </resources>
