--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="article_details_responsive_width">450dp</dimen>
+    <dimen name="article_details_content_margin_bottom">48dp</dimen>
     <dimen name="article_details_anchor_height">144dp</dimen>
 </resources>
