--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/item_spacing_half"
-    android:layout_marginTop="@dimen/item_spacing_half"
+    android:layout_marginBottom="@dimen/item_spacing_full"
     tools:layout_margin="@dimen/item_spacing_full">
 
     <LinearLayout
